Fixed vertical align in Room List.

--- a/client/stylesheets/stylesheet.less
+++ b/client/stylesheets/stylesheet.less
@@ -288,5 +288,6 @@ header {
 
   td, th {
     text-align: center;
+    vertical-align: middle;
   }
 }
